@@ -3,6 +3,11 @@
 	* swank-sbcl-exts.lisp (compute-enriched-decoded-arglist): Filter
 	uninteresting arguments for SB-ASSEM:INST.
 
+2009-07-19  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-kawa.scm (operator-arglist): Implemented, at least for
+	some kind of function.
+
 2009-07-12  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-kawa.scm (swank-writer): Use set! for now, as the svn
